# qt-stockchart

./: .gitignore  CMakeLists.txt  README.md  glw.json  glw_1h.json  how-to-make.txt  providers.json  resources.qrc  web-pages.json  win-vs.bat
.claude/: settings.local.json
.github/workflows/: windows-build.yml
build_exe/: CMakeCache.txt  Makefile  StockChart  cmake_install.cmake
build_exe/StockChart_autogen/: deps
build_mac_app/: Makefile
build_mac_app/StockChart_autogen/: deps
build_mac_exe/: Makefile
build_mac_exe/StockChart_autogen/: deps
build_win_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  StockChart.vcxproj  ZERO_CHECK.vcxproj
src/: AdBlockDialog.cpp  AdBlockDialog.h  AlphaVantageProvider.cpp  AlphaVantageProvider.h  AppSettings.cpp  AppSettings.h  ChartManager.cpp  ChartManager.h  FinnhubProvider.cpp  FinnhubProvider.h  FmpProvider.cpp  FmpProvider.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  PolygonProvider.cpp  PolygonProvider.h  RequestInterceptor.cpp  RequestInterceptor.h  SettingsDialog.cpp  SettingsDialog.h  StockCacheManager.cpp  StockCacheManager.h  StockDataFetcher.h  StockDataProvider.cpp  StockDataProvider.h  StockGroupManager.cpp  StockGroupManager.h  TableManager.cpp  TableManager.h  TwelveDataProvider.cpp  TwelveDataProvider.h  WebBrowserWidget.cpp  WebBrowserWidget.h  YahooFinanceProvider.cpp  YahooPageProvider.cpp  main.cpp
src/providers/: AlphaVantageProvider.cpp  AlphaVantageProvider.h  FinnhubProvider.cpp  GoogleFinanceWebProvider.cpp  GoogleFinanceWebProvider.h  MorningstarProvider.cpp  MorningstarProvider.h  (+6 more)
(+24 files in other folders)
